# TrabalhoPraticoAEDS3

./: CMakeLists.txt  README.md
docs/Markdown/: TODO.md  modelagem_dados.md  modern_cpp_tutorial.md
docs/UML Diagrams/archive/: diagrama_casos_uso.mmd  fluxograma.mmd  relacionamento.mmd
src/: main.cpp
src/dao/: StudentDAO.cpp  StudentDAO.h
src/models/: Student.h
src/utils/: FileManager.h
tests/: test_main.cpp
